--- a/event-booking.html
+++ b/event-booking.html
@@ -3,9 +3,70 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="styles.css">
+    <title>Event Booking</title>
 </head>
 <body>
-    
+    <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+    <button class="btn" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">
+        <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
+            <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5"/>
+          </svg>
+    </button>
+</div>
+    <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
+      <div class="offcanvas-header">
+        <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close">
+            <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-x" viewBox="0 0 16 16">
+                <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708"/>
+              </svg>
+        </button>
+      </div>
+      <div class="offcanvas-body">
+        <ul>
+            <li>
+                <a href="./home.html" >Home</a>
+            </li>
+            <li>
+                <a href="./about.html" >About</a>
+            </li>
+            <li>
+                <a href="./menu.html" >Menu</a>
+            </li>
+            <li>
+                <a href="./event-booking.html" >Event Booking</a>
+            </li>
+            <li>
+                <a href="./private-booking.html" >Private Booking</a>
+            </li>
+            <li>
+                <a href="./miracle.html" >Miracle</a>
+            </li>
+            <li>
+                <a href="./press.html" >Press</a>
+            </li>
+            <li>
+                <a href="./merch.html" >Merch</a>
+            </li>
+            <li>
+                <a href="./contact.html" >Contact</a>
+            </li>
+            <li>
+                <a href="./email.html" >Email Signup</a>
+            </li>
+        </ul>
+      </div>
+    </div>
+    <div class="container">
+        <header>
+              
+        <main>
+            <h1>Event Booking</h1>
+            <p>Here is where you see events coming up</p>
+        </main>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  
 </body>
 </html>
