--- a/home.html
+++ b/home.html
@@ -26,31 +26,34 @@
       <div class="offcanvas-body">
         <ul>
             <li>
-                <a href="./about.html">About</a>
+                <a href="./home.html" >Home</a>
             </li>
             <li>
-                <a href="./menu.html">Menu</a>
+                <a href="./about.html" >About</a>
             </li>
             <li>
-                <a href="./event-booking.html">Event Booking</a>
+                <a href="./menu.html" >Menu</a>
             </li>
             <li>
-                <a href="./private-booking.html">Private Booking</a>
+                <a href="./event-booking.html" >Event Booking</a>
             </li>
             <li>
-                <a href="./miracle.html">Miracle</a>
+                <a href="./private-booking.html" >Private Booking</a>
             </li>
             <li>
-                <a href="./press.html">Press</a>
+                <a href="./miracle.html" >Miracle</a>
             </li>
             <li>
-                <a href="./merch.html">Merch</a>
+                <a href="./press.html" >Press</a>
             </li>
             <li>
-                <a href="./contact.html">Contact</a>
+                <a href="./merch.html" >Merch</a>
             </li>
             <li>
-                <a href="./email.html">Email Signup</a>
+                <a href="./contact.html" >Contact</a>
+            </li>
+            <li>
+                <a href="./email.html" >Email Signup</a>
             </li>
         </ul>
       </div>
@@ -58,13 +61,13 @@
     <div class="container">
         <header>
               </div>
-            <img src="images/thief logo.jpg">
+            <img src="images/thief logo.jpg" class="img-fluid rounded mx-auto d-block" width="500px" height="200px">
         </header>
         <main>
-            <h1>Thief NYC</h1>
+            
         </main>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-  </body>
+  
 </body>
 </html>
