Added logo to each page

--- a/about.html
+++ b/about.html
@@ -61,7 +61,9 @@
         </div>
         <div class="container">
             <header> 
-                <h1>about</h1></header>
+                <img src="images/thief logo.jpg" class="img-fluid rounded mx-auto d-block" width="500px" height="200px">
+                <h1>about</h1>
+            </header>
                 <p>THIEF, THE FIRST SOLO VENTURE FROM JOHN MCNULTY (SWINE,
                     COCKTAIL KINGDOM HOSPITALITY GROUP), HAS A MISSION TO
                     STEAL BACK THE TIME SPENT AWAY FROM YOUR FAVORITE BAR.
