--- a/contact.html
+++ b/contact.html
@@ -59,6 +59,7 @@
     </div>
     <div class="container">
         <header>
+            <img src="images/thief logo.jpg" class="img-fluid rounded mx-auto d-block" width="500px" height="200px">
             <h1>Contact</h1>
             <p>Here is even more contact information</p>
         </header>
