--- a/email.html
+++ b/email.html
@@ -59,7 +59,9 @@
       </div>
     </div>
     <div class="container">
- 
+        <header>
+            <img src="images/thief logo.jpg" class="img-fluid rounded mx-auto d-block" width="500px" height="200px">
+        </header>
         <main>
             <h1>Email Signup</h1>
             <p>Here is where you signup for email notifications</p>
