--- a/event-booking.html
+++ b/event-booking.html
@@ -60,7 +60,8 @@
     </div>
     <div class="container">
         <header>
-              
+            <img src="images/thief logo.jpg" class="img-fluid rounded mx-auto d-block" width="500px" height="200px">
+        </header>
         <main>
             <h1>Event Booking</h1>
             <p>Here is where you see events coming up</p>
