--- a/menu.html
+++ b/menu.html
@@ -59,6 +59,9 @@
       </div>
     </div>
     <div class="container">
+        <header>
+            <img src="images/thief logo.jpg" class="img-fluid rounded mx-auto d-block" width="500px" height="200px">
+        </header>
         <main>
             <h1>Menu</h1>
             <p>Here is where the menus will go</p>
