--- a/home.html
+++ b/home.html
@@ -60,13 +60,27 @@
     </div>
     <div class="container">
         <header>
-            <img src="images/thief logo.jpg" class="img-fluid rounded mx-auto d-block" width="500px" height="200px">
+            <img src="images/thief logo.jpg" class="img-fluid rounded mx-auto d-block" width="500px" height="200px"/>
         </header>
         <main>
-            
+            <div class="container">
+                <div class="row" id="homepage-images">
+                    <div class="col">
+                        <img src="./images/57bcc3731c61a9f52f44f8b230afa32b.jpg" width="400px" height="500px"/>
+                    </div>
+                    <div class="col">
+                        <img src="./images/_ (1).jpg" width="350px" height="500px"/>
+                    </div>
+                     <div class="col">
+                        <img src="./images/_ (4).jpg" width="350px" height="400px"/>
+                    </div>
+                    <div class="col">
+                        <img src="./images/IMG_8401.jpg" width="500px" height="500px"/>
+                    </div>
+                </div>
+            </div>
         </main>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-  
 </body>
 </html>
