--- a/miracle.html
+++ b/miracle.html
@@ -61,12 +61,35 @@
     <div class="container">
         <header>
               </div>
-            <img src="images/thief logo.jpg" class="img-fluid rounded mx-auto d-block" width="500px" height="200px">
+           
         </header>
-        <main>
-            <h1>Miracle</h1>
-            <p>Here is where the Miracle info will go</p>
-        </main>
+        <img src="miracle/1.png" class="img-fluid mx-auto d-block rounded" >
+        <img src="miracle/2.png" class="img-fluid mx-auto d-block rounded" >
+        <img src="miracle/3.png" class="img-fluid mx-auto d-block rounded" >
+        <img src="miracle/4.png" class="img-fluid mx-auto d-block rounded" >
+        <img src="miracle/5.png" class="img-fluid mx-auto d-block rounded" >
+        <img src="miracle/6.png" class="img-fluid mx-auto d-block rounded" >
+        <img src="miracle/7.png" class="img-fluid mx-auto d-block rounded" >
+        <img src="miracle/8.png" class="img-fluid mx-auto d-block rounded" >
+        <img src="miracle/9.png" class="img-fluid mx-auto d-block rounded" >
+        <img src="miracle/10.png" class="img-fluid mx-auto d-block rounded" >
+        <img src="miracle/11.png" class="img-fluid mx-auto d-block rounded" >
+        <img src="miracle/12.png" class="img-fluid mx-auto d-block rounded" >
+        <img src="miracle/13.png" class="img-fluid mx-auto d-block rounded" >
+        <img src="miracle/14.png" class="img-fluid mx-auto d-block rounded" >
+        <img src="miracle/15.png" class="img-fluid mx-auto d-block rounded" >
+        <img src="miracle/16.png" class="img-fluid mx-auto d-block rounded" >
+        <img src="miracle/17.png" class="img-fluid mx-auto d-block rounded" >
+        <img src="miracle/18.png" class="img-fluid mx-auto d-block rounded" >
+        <img src="miracle/19.png" class="img-fluid mx-auto d-block rounded" >
+        <img src="miracle/20.png" class="img-fluid mx-auto d-block rounded" >
+        <img src="miracle/21.png" class="img-fluid mx-auto d-block rounded" >
+        <img src="miracle/22.png" class="img-fluid mx-auto d-block rounded" >
+        <img src="miracle/23.png" class="img-fluid mx-auto d-block rounded" >
+        <img src="miracle/24.png" class="img-fluid mx-auto d-block rounded" >
+        <img src="miracle/25.png" class="img-fluid mx-auto d-block rounded" >
+        <img src="miracle/26.png" class="img-fluid mx-auto d-block rounded" >
+        <img src="miracle/27.png" class="img-fluid mx-auto d-block rounded" >      
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   
