--- a/contact.html
+++ b/contact.html
@@ -59,10 +59,11 @@
     </div>
     <div class="container">
         <header>
-            <img src="images/thief logo.jpg" class="img-fluid rounded mx-auto d-block" width="500px" height="200px">
-            <h1>Contact</h1>
-            <p>Here is even more contact information</p>
+         
         </header>
+        <div class="container">
+            <img src="images/underconstruction.png" class="img-fluid rounded mx-auto d-block" >
+        </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 <body>
 
