--- a/home.html
+++ b/home.html
@@ -64,7 +64,7 @@
         </header>
         <main>
             <div class="container">
-                
+                <img src="images/underconstruction.png" class="img-fluid rounded mx-auto d-block" >
             </div>
         </main>
     </div>
