--- a/menu.html
+++ b/menu.html
@@ -60,12 +60,11 @@
     </div>
     <div class="container">
         <header>
-            <img src="images/thief logo.jpg" class="img-fluid rounded mx-auto d-block" width="500px" height="200px">
+            
         </header>
-        <main>
-            <h1>Menu</h1>
-            <p>Here is where the menus will go</p>
-        </main>
+        <div class="container">
+            <img src="images/underconstruction.png" class="img-fluid rounded mx-auto d-block" >
+        </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   
