--- a/private-booking.html
+++ b/private-booking.html
@@ -60,13 +60,11 @@
     </div>
     <div class="container">
         <header>
-              </div>
-            <img src="images/thief logo.jpg" class="img-fluid rounded mx-auto d-block" width="500px" height="200px">
+              
         </header>
-        <main>
-            <h1>Private Booking</h1>
-            <p>Here is where you book private events</p>
-        </main>
+        <div class="container">
+            <img src="images/underconstruction.png" class="img-fluid rounded mx-auto d-block" >
+        </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   
