--- a/about.html
+++ b/about.html
@@ -46,16 +46,15 @@
         </div>
         <div class="container">
             <header> 
-               
+                <img src="./about-images/about-header.png" class="img-fluid rounded mx-auto d-block">
             </header>
-                <img src="about/1.png" class="img-fluid mx-auto d-block rounded" >
-                <img src="about/2.png" class="img-fluid mx-auto d-block rounded" >
-                <img src="about/3.png" class="img-fluid mx-auto d-block rounded" >
-                <img src="about/4.png" class="img-fluid mx-auto d-block rounded" >
-                <img src="about/5.png" class="img-fluid mx-auto d-block rounded" >
-                <img src="about/6.png" class="img-fluid mx-auto d-block rounded" >
-                <img src="about/7.png" class="img-fluid mx-auto d-block rounded" >
-                <img src="about/8.png" class="img-fluid mx-auto d-block rounded" >
+            <main>
+                <div class="about-section">
+                    <img src="./about-images/john-picture.png" class="img-fluid rounded mx-auto d-block">
+                    <img src="./about-images/about-main-2.png" class="img-fluid rounded mx-auto d-block" >
+                </div>
+            </main>
+                
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
