Replaced unwanted images, injected new sections

--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@
             </header>
             <main>
                 <div class="about-section">
-                    <img src="./about-images/john-picture.png" class="img-fluid rounded mx-auto d-block">
+                    <img src="./about-images/john.png" class="img-fluid rounded mx-auto d-block" >
                     <img src="./about-images/about-main-2.png" class="img-fluid rounded mx-auto d-block" >
                 </div>
             </main>
