--- a/miracle.html
+++ b/miracle.html
@@ -44,37 +44,45 @@
       </div>
     </div>
     <div class="container">
-        <header>
-              </div>
-           
+        <header class="miracle-header">
+              <img src="./miracle-images/cropped-window.png" class="img-fluid rounded mx-auto d-block"  >
         </header>
-        <img src="miracle/1.png" class="img-fluid mx-auto d-block rounded" >
-        <img src="miracle/2.png" class="img-fluid mx-auto d-block rounded" >
-        <img src="miracle/3.png" class="img-fluid mx-auto d-block rounded" >
-        <img src="miracle/4.png" class="img-fluid mx-auto d-block rounded" >
-        <img src="miracle/5.png" class="img-fluid mx-auto d-block rounded" >
-        <img src="miracle/6.png" class="img-fluid mx-auto d-block rounded" >
-        <img src="miracle/7.png" class="img-fluid mx-auto d-block rounded" >
-        <img src="miracle/8.png" class="img-fluid mx-auto d-block rounded" >
-        <img src="miracle/9.png" class="img-fluid mx-auto d-block rounded" >
-        <img src="miracle/10.png" class="img-fluid mx-auto d-block rounded" >
-        <img src="miracle/11.png" class="img-fluid mx-auto d-block rounded" >
-        <img src="miracle/12.png" class="img-fluid mx-auto d-block rounded" >
-        <img src="miracle/13.png" class="img-fluid mx-auto d-block rounded" >
-        <img src="miracle/14.png" class="img-fluid mx-auto d-block rounded" >
-        <img src="miracle/15.png" class="img-fluid mx-auto d-block rounded" >
-        <img src="miracle/16.png" class="img-fluid mx-auto d-block rounded" >
-        <img src="miracle/17.png" class="img-fluid mx-auto d-block rounded" >
-        <img src="miracle/18.png" class="img-fluid mx-auto d-block rounded" >
-        <img src="miracle/19.png" class="img-fluid mx-auto d-block rounded" >
-        <img src="miracle/20.png" class="img-fluid mx-auto d-block rounded" >
-        <img src="miracle/21.png" class="img-fluid mx-auto d-block rounded" >
-        <img src="miracle/22.png" class="img-fluid mx-auto d-block rounded" >
-        <img src="miracle/23.png" class="img-fluid mx-auto d-block rounded" >
-        <img src="miracle/24.png" class="img-fluid mx-auto d-block rounded" >
-        <img src="miracle/25.png" class="img-fluid mx-auto d-block rounded" >
-        <img src="miracle/26.png" class="img-fluid mx-auto d-block rounded" >
-        <img src="miracle/27.png" class="img-fluid mx-auto d-block rounded" >      
+        <main>
+            <div class="christmas-experience">
+            <h1>Experience the ghosts of Christmas</h1>
+            <div class="christmas-ghosts d-flex justify-content-between">
+                <section>
+            <img src="./texture/past-texture2.png" width="200px" height="200px">
+            <p>Press from previous years</p>
+        </section>
+        <section>
+            <img src="./texture/present.png" width="200px" height="200px">
+            <p>Info on the 2024 season</p>
+        </section>
+        <section>
+            <img src="./texture/future.png" width="200px" height="200px">
+            <p>What to expect this year</p>
+        </section>
+        </div>
+    </div>
+        <div class="buzz-from-the-past">
+            <h1>Buzz from the past</h1>
+                <h2>Time out</h2>
+                <h2>City Tour NYC</h2>
+                <h2>Average socialite</h2>
+                <h2>TikTok</h2>
+                <h2>North Brooklyn Dispatch</h2>
+                <h2>Greenpointers</h2>
+                <h2>Secret NYC</h2>
+        </div>
+        <div class="faqs">
+            <h1>A few things you're gonna want to know</h1>
+            <h2>This years cocktails</h2>
+            <h2>Large party inquiry</h2>
+            <h2>General FAQ</h2>
+            <h2>How to book</h2>
+        </div>
+        </main>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   
