--- a/miracle.html
+++ b/miracle.html
@@ -48,40 +48,160 @@
               <img src="./miracle-images/cropped-window.png" class="img-fluid rounded mx-auto d-block"  >
         </header>
         <main>
-            <div class="christmas-experience">
+            <div class="container christmas-experience">
             <h1>Experience the ghosts of Christmas</h1>
-            <div class="christmas-ghosts d-flex justify-content-between">
-                <section>
-            <img src="./texture/past-texture2.png" width="200px" height="200px">
+                <div class="row">
+                <div class="past col-3">
+            <img src="./texture/past-texture2.png"  width="220px" height="200px">
             <p>Press from previous years</p>
-        </section>
-        <section>
-            <img src="./texture/present.png" width="200px" height="200px">
+        </div>
+        <div class="present col-3">
+            <img src="./texture/present.png"  width="220px" height="200px">
             <p>Info on the 2024 season</p>
-        </section>
-        <section>
-            <img src="./texture/future.png" width="200px" height="200px">
+        </div>
+        <div class="future col-3">
+            <img src="./texture/future.png"  width="220px" height="200px">
             <p>What to expect this year</p>
-        </section>
         </div>
     </div>
-        <div class="buzz-from-the-past">
+        </div>
+        <div class="container buzz-from-the-past">
+            <div class="container">
+            <div class="d-flex flex-row justify-content-evenly">
+                <div class="col-2">
             <h1>Buzz from the past</h1>
+        </div>
+        <div class="col-2">
                 <h2>Time out</h2>
+                <p>Holiday pop-up bars Miracle and Sippin' Santa announce thier 2023 return</p>
+            </div>
+            <div class="col-2">
                 <h2>City Tour NYC</h2>
+                <p>Williamsburg bar transforming into miracle on union</p>
+            </div>
+            <div class="col-2">
                 <h2>Average socialite</h2>
+                <p>Miracle on 9th Street Holiday Pop-up Bar, NYC</p>
+            </div> 
+            </div>
+        </div>
+        <div class="container">
+            <div class="d-flex flex-row justify-content-evenly">
+                <div class="col-2">    
                 <h2>TikTok</h2>
+                <p>Thief Miracle Pop up NYC</p>
+            </div> 
+            <div class="col-2">
                 <h2>North Brooklyn Dispatch</h2>
+                <p>Miracle on Union returns to Thief</p>
+            </div>
+            <div class="col-2">
                 <h2>Greenpointers</h2>
+                <p>Miracle on Union brings Holiday cocktail pop-up to Thief</p>
+            </div>
+            <div class="col-2">
                 <h2>Secret NYC</h2>
+                <p>Holiday bars, Miracle & Sippin' Satan, Return for the Holiday season this month</p>
+            </div>
         </div>
-        <div class="faqs">
+        </div> 
+    </div>
+        <div class="faqs container text-center">
             <h1>A few things you're gonna want to know</h1>
-            <h2>This years cocktails</h2>
-            <h2>Large party inquiry</h2>
-            <h2>General FAQ</h2>
-            <h2>How to book</h2>
+        <div class="d-flex justify-content-evenly">
+            <button type="button" class="btn mb-4">This years cocktails</button>       
+            <button type="button" class="btn">Large party inquiry</button>
+        </div>        
+        <div class="d-flex row justify-content-evenly">        
+            <button type="button" class="btn">General FAQ</button>
+            <button type="button" class="btn">How to book</button>       
         </div>
+        </div>
+        <div class="drinks-one container">
+        <div class="d-block flex-row justify-content-envenly">
+            <button type="button" class="btn">
+                <img src="./miracle-images/christmapolitan.png" width="500px" height="240px" >
+            </button>
+            <button type="button" class="btn">
+                <img src="./miracle-images/snowball.png" width="500px" height="240px" >
+            </button>
+            </div>
+            <div class="d-flex flex-row justify-content-envenly">
+            <button type="button" class="btn">
+                <img src="./miracle-images/stocking-stuffer.png" width="500px" height="240px" >
+            </button>
+            <button type="button" class="btn">
+                <img src="./miracle-images/christmasaurus.png" width="500px" height="240px" >
+            </button>
+        </div>
+    </div>
+    <div class="drinks-two container">
+        <div class="d-flex justify-content-center">
+            <button type="button" class="btn">
+                <img src="./miracle-images/crooked-antler.png" width="190px">
+             </button>
+            <button type="button" class="btn">
+                <img src="./miracle-images/santa-slide.png" width="190px">
+            </button>
+            <button type="button" class="btn">
+                <img src="./miracle-images/run-reindeer.png" width="190px">
+            </button>
+            <button type="button" class="btn">
+                <img src="./miracle-images/rudolphs-replacement.png" width="190px">
+            </button>
+        </div>
+        </div>  
+        <div class="drinks-three container">
+            <div class="d-block flex-row justify-content-envenly">
+                <button type="button" class="btn">
+                    <img src="./miracle-images/koala.png"  width="500px" height="240px" >
+                </button>
+                <button type="button" class="btn">
+                    <img src="./miracle-images/yippie.png" width="500px" height="240px" >
+                </button>
+                </div>
+                <div class="d-flex flex-row justify-content-envenly">
+                <button type="button" class="btn">
+                    <img src="./miracle-images/jingle-balls.png" width="500px" height="240px" >
+                </button>
+                <button type="button" class="btn">
+                    <img src="./miracle-images/krampus.png" width="500px" height="240px" >
+                </button>
+            </div>
+        </div>
+        <div class="drinks-four container">
+            <div class="d-flex justify-content-center">
+                <button type="button" class="btn">
+                    <img src="./miracle-images/hot-buttered.png" width="190px" height="400px">
+                 </button>
+                <button type="button" class="btn">
+                    <img src="./miracle-images/naughty-nice.png" width="190px" height="400px">
+                </button>
+                <button type="button" class="btn">
+                    <img src="./miracle-images/mulled-wine.png" width="190px" height="400px">
+                </button>
+                <button type="button" class="btn">
+                    <img src="./miracle-images/secret-santa.png" width="190px" height="400px">
+                </button>
+            </div>
+            </div>
+            <img src="./recipes-images/christmapolitan.png" width="1000px" height="500px">
+            <img src="./recipes-images/snowball.png">
+            <img src="./recipes-images/stocking-stuffer.png">
+            <img src="./recipes-images/christmasaurus.png">
+            <img src="./recipes-images/crooked-antler.png">
+            <img src="./recipes-images/santa-slide.png">
+            <img src="./recipes-images/run-reindeer.png">
+            <img src="./recipes-images/rudoplhs-replacement.png">
+            <img src="./recipes-images/koala.png">
+            <img src="./recipes-images/yippie.png">
+            <img src="./recipes-images/jingle-balls.png">
+            <img src="./recipes-images/hot-buttered.png">
+            <img src="./recipes-images/naughty-nice.png">
+            <img src="./recipes-images/mulled-wine.png">
+            <img src="./recipes-images/krampus.png">
+            <img src="./recipes-images/secret-santa.png">
+            
         </main>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
