Added new images, injected more on miracle page

--- a/miracle.html
+++ b/miracle.html
@@ -185,7 +185,8 @@
                 </button>
             </div>
             </div>
-            <img src="./recipes-images/christmapolitan.png" width="1000px" height="500px">
+            <div class="recipes">
+            <img src="./recipes-images/christmapolitan.png" >
             <img src="./recipes-images/snowball.png">
             <img src="./recipes-images/stocking-stuffer.png">
             <img src="./recipes-images/christmasaurus.png">
@@ -201,7 +202,46 @@
             <img src="./recipes-images/mulled-wine.png">
             <img src="./recipes-images/krampus.png">
             <img src="./recipes-images/secret-santa.png">
-            
+        </div>
+        <div class="faqs-info container">
+            <div class="row">
+                <div class="col">
+            <img src="./miracle-images/faqs.png" class="img-fluid">
+            </div>
+            <div class="col-4">
+            <h1>Question 1</h1>
+            <p>...</p>
+            <h1>Question 2</h1>
+            <p>...</p>
+            <h1>Question 3</h1>
+            <p>...</p>
+            <h1>Question 4</h1>
+            <p>...</p>
+            <h1>Question 5</h1>
+            <p>...</p>
+            <h1>Question 6</h1>
+            <p>...</p>
+            </div>
+        </div>
+        </div>
+        <div class="reservations">
+            <img src="./miracle-images/reserve-spot.png" class="img-fluid">
+            </div>
+        <div class="dates container mb-5">
+        <div class="row">
+            <div class="col">
+             <h1>November Dates</h1>
+             <button>image</button>
+             <h2>Check availabilty</h2>
+                </div>
+                <div class="col">
+                    <h1>December Dates</h1>
+                    <button>image</button>
+                    <h2>Check availabilty</h2>
+                </div>
+        </div>
+    </div>
+        </div>
         </main>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
