--- a/miracle.html
+++ b/miracle.html
@@ -43,7 +43,7 @@
         </ul>
       </div>
     </div>
-        <div class="container">
+        <div class="container-fluid">
         <div class="miracle-header" id="top">
           <img src="./miracle-images/cropped-window.png" alt="" class="img-fluid">
         </div>
@@ -53,36 +53,38 @@
     </div>
         <div class="drinks" id="drinks">
         <div class="drinks-one">
-        <div class="d-flex flex-row justify-content-center">
-            <button type="button" class="btn">
-                <a href="#christmapolitan"><img src="./miracle-images/christmapolitan.png" class="" width="500px" height="240px" ></a>
-            </button>
-            <button type="button" class="btn">
-                <a href="#snowball"><img src="./miracle-images/snowball.png" class="" width="500px" height="240px" ></a>
-            </button>
+            <div class="row">
+                <div class="col-md-6">
+                <a href="#christmapolitan"><img src="./miracle-images/christmapolitan.png" class="img-fluid"  >
+                </a>
+                </div>
+                <div class="col-md-6">
+                <a href="#snowball"><img src="./miracle-images/snowball.png" class="img-fluid" ></a>
+                </div>
             </div>
-            <div class="d-flex flex-row justify-content-center">
-            <button type="button" class="btn">
-                <a href="#stocking-stuffer"><img src="./miracle-images/stocking-stuffer.png" class="" width="500px" height="240px" ></a>
-            </button>
-            <button type="button" class="btn">
-                <a href="#christmasaurus"><img src="./miracle-images/christmasaurus.png" class="" width="500px" height="240px" ></a>
-            </button>
+            <div class="row">
+            <div class="col-md-6">
+                 <a href="#stocking-stuffer"><img src="./miracle-images/stocking-stuffer.png" class="img-fluid"  ></a>
+                 </div>
+                 <div class="col-md-6">
+                <a href="#christmasaurus"><img src="./miracle-images/christmasaurus.png" class="img-fluid"  ></a>
+                </div>
+        </div>
         </div>
     </div>
     <div class="drinks-two" id="drinks-two">
         <div class="d-flex flex-row justify-content-center">
             <button type="button" class="btn">
-                <img src="./miracle-images/crooked-antler.png" class="" width="190px"><a href="#crooked-antler"></a>
+                <img src="./miracle-images/crooked-antler.png" class="img-fluid" width="190px"><a href="#crooked-antler"></a>
              </button>
             <button type="button" class="btn">
-                <img src="./miracle-images/santa-slide.png" class="" width="190px"><a href="#santa-slide"></a>
+                <img src="./miracle-images/santa-slide.png" class="img-fluid" width="190px"><a href="#santa-slide"></a>
             </button>
             <button type="button" class="btn">
-                <img src="./miracle-images/run-reindeer.png" class="" width="190px"><a href="#run-reindeer"></a>
+                <img src="./miracle-images/run-reindeer.png" class="img-fluid" width="190px"><a href="#run-reindeer"></a>
             </button>
             <button type="button" class="btn">
-                <img src="./miracle-images/rudolphs-replacement.png" class="" width="190px"><a href="#rudolphs-replacement"></a>
+                <img src="./miracle-images/rudolphs-replacement.png" class="img-fluid" width="190px"><a href="#rudolphs-replacement"></a>
             </button>
         </div>
         </div>  
