Injected new container, discarded unnecessary codes

--- a/miracle.html
+++ b/miracle.html
@@ -8,14 +8,16 @@
     <title>Miracle</title>
 </head>
 <body>
-    <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+    <div class="container miracle-page">
+        <div class="nav-links">
+        <div class="d-grid gap-2 d-md-flex justify-content-md-end">
     <button class="btn" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">
         <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
             <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5"/>
-          </svg>
+        </svg>
     </button>
-</div>
-    <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
+        </div>
+        <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
       <div class="offcanvas-header">
         <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close">
             <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-x" viewBox="0 0 16 16">
@@ -42,125 +44,116 @@
             </li>
         </ul>
       </div>
+         </div>
+         </div>
+    <header>
+    <div class="miracle-header" id="top">
+          <img src="./miracle-images/cropped-window.png" alt="" class="img-responsive rounded" width="1200">
     </div>
-        <div class="container-fluid">
-        <div class="miracle-header" id="top">
-          <img src="./miracle-images/cropped-window.png" alt="" class="img-fluid">
-        </div>
-        <main>
-        <div class="buzz-from-the-past" id="buzz">
-            <img src="./miracle-images/buzz-header.png" class="img-fluid" alt="">      
+    </header>
+<main>
+    <div class="experience-ghosts">
+        <a href="">Press</a>
+        <a href="">Facts</a>
+        <a href="">Drinks</a>
+        <a href="">Book</a>
     </div>
-        <div class="drinks" id="drinks">
+    <div class="container drinks" id="drinks">       
         <div class="drinks-one">
-            <div class="row">
-                <div class="col-md-6">
-                <a href="#christmapolitan"><img src="./miracle-images/christmapolitan.png" class="img-fluid"  >
-                </a>
-                </div>
-                <div class="col-md-6">
-                <a href="#snowball"><img src="./miracle-images/snowball.png" class="img-fluid" ></a>
-                </div>
-            </div>
-            <div class="row">
-            <div class="col-md-6">
-                 <a href="#stocking-stuffer"><img src="./miracle-images/stocking-stuffer.png" class="img-fluid"  ></a>
-                 </div>
-                 <div class="col-md-6">
-                <a href="#christmasaurus"><img src="./miracle-images/christmasaurus.png" class="img-fluid"  ></a>
-                </div>
+            <a href="#christmapolitan"><img src="./miracle-images/christmapolitan.png" class="img-responsive" width="450px" >
+            </a>  
+            <a href="#snowball">
+                <img src="./miracle-images/snowball.png" class="img-responsive" width="450px" >
+            </a>
+            <a href="#stocking-stuffer">
+                <img src="./miracle-images/stocking-stuffer.png" class="img-responsive" width="450px" alt="">
+            </a>
+            <a href="#christmasaurus">
+                <img src="./miracle-images/christmasaurus.png" class="img-responsive" width="450px" alt="">
+            </a>
         </div>
+        <div class="drinks-two">
+            <a href="#crooked-antler">
+                <img src="./miracle-images/crooked-antler.png" class="img-responsive" width="205" alt="">
+            </a>
+            <a href="#santa-slide">
+                <img src="./miracle-images/secret-santa.png" class="img-responsive" width="205" alt="">
+            </a>
+            <a href="#run-reindeer">
+                <img src="./miracle-images/run-reindeer.png" class="img-responsive" width="205" alt="">
+            </a>
+            <a href="#rudolphs-replacement">
+                <img src="./miracle-images/rudolphs-replacement.png" width="205" alt="">
+            </a>
         </div>
-    </div>
-    <div class="drinks-two" id="drinks-two">
-        <div class="d-flex flex-row justify-content-center">
-            <button type="button" class="btn">
-                <img src="./miracle-images/crooked-antler.png" class="img-fluid" width="190px"><a href="#crooked-antler"></a>
-             </button>
-            <button type="button" class="btn">
-                <img src="./miracle-images/santa-slide.png" class="img-fluid" width="190px"><a href="#santa-slide"></a>
-            </button>
-            <button type="button" class="btn">
-                <img src="./miracle-images/run-reindeer.png" class="img-fluid" width="190px"><a href="#run-reindeer"></a>
-            </button>
-            <button type="button" class="btn">
-                <img src="./miracle-images/rudolphs-replacement.png" class="img-fluid" width="190px"><a href="#rudolphs-replacement"></a>
-            </button>
-        </div>
-        </div>  
         <div class="drinks-three">
-            <div class="d-flex flex-row justify-content-center">
-                <button type="button" class="btn">
-                    <img src="./miracle-images/koala.png" class="" width="500px" height="240px" ><a href="#koala"></a>
-                </button>
-                <button type="button" class="btn">
-                    <img src="./miracle-images/yippie.png" class="i" width="500px" height="240px" ><a href="#yippie"></a>
-                </button>
-                </div>
-                <div class="d-flex flex-row justify-content-center">
-                <button type="button" class="btn">
-                    <img src="./miracle-images/jingle-balls.png" class="" width="500px" height="240px" ><a href="#jingle-balls"></a>
-                </button>
-                <button type="button" class="btn">
-                    <img src="./miracle-images/krampus.png" class="" width="500px" height="240px" ><a href="#krampus"></a>
-                </button>
-            </div>
+            <a href="#koala">
+                <img src="./miracle-images/koala.png" class="img-responsive" width="450px" alt="">
+            </a>
+            <a href="#yippie">
+                <img src="./miracle-images/yippie.png" class="img-responsive" width="450" alt="">
+            </a>
+            <a href="#jingle-balls">
+                <img src="./miracle-images/jingle-balls.png" class="img-responsive" width="450" alt="">
+            </a>
+            <a href="#krampus">
+                <img src="./miracle-images/krampus.png" class="img-responsive" width="450" alt="">
+            </a>
         </div>
         <div class="drinks-four">
-            <div class="d-flex justify-content-center">
-                <button type="button" class="btn">
-                    <img src="./miracle-images/hot-buttered.png" class="" width="190px" height="400px"><a href="#hot-buttered"></a>
-                 </button>
-                <button type="button" class="btn">
-                    <img src="./miracle-images/naughty-nice.png" class="" width="190px" height="400px"><a href="#naughty-nice"></a>
-                </button>
-                <button type="button" class="btn">
-                    <img src="./miracle-images/mulled-wine.png" class="" width="190px" height="400px"><a href="#mulled-wine"></a>
-                </button>
-                <button type="button" class="btn">
-                    <img src="./miracle-images/secret-santa.png" class="" width="190px" height="400px"><a href="#secret-santa"></a>
-                </button>
-            </div>
-            </div>
+            <a href="#hot-buttered">
+                <img src="./miracle-images/hot-buttered.png" class="img-responsive" width="205" alt="">
+            </a>
+            <a href="#naughty-nice">
+                <img src="./miracle-images/naughty-nice.png" class="img-responsive" width="205" alt="">
+            </a>
+            <a href="#mulled-wine">
+                <img src="./miracle-images/mulled-wine.png" class="img-responsive" width="205" alt="">
+            </a>
+            <a href="#secret-santa">
+                <img src="./miracle-images/secret-santa.png" class="img-responsive" width="205" alt="">
+            </a>
         </div>
-            <div class="recipes">
-            <img src="./recipes-images/christmapolitan.png" class="" id="christmapolitan">
-            <a href="#drinks">back to top</a>
-            <img src="./recipes-images/snowball.png" class="" id="snowball">
-            <a href="#drinks">back to top</a>
-            <img src="./recipes-images/stocking-stuffer.png" class="" id="stocking-stuffer">
-            <a href="#drinks">back to top</a>
-            <img src="./recipes-images/christmasaurus.png" class="i" id="christmasaurus">
-            <a href="#drinks">back to top</a>
-            <img src="./recipes-images/crooked-antler.png" class="i" id="crooked-antler">
-            <a href="#drinks-two">back to top</a>
-            <img src="./recipes-images/santa-slide.png" class="" id="santa-slide">
-            <a href="#drinks-two">back to top</a>
-            <img src="./recipes-images/run-reindeer.png" class="i" id="run-reindeer">
-            <a href="#drinks-two">back to top</a>
-            <img src="./recipes-images/rudoplhs-replacement.png" class="" id="rudoplhs-replacement">
-            <a href="#drinks-two">back to top</a>
-            <img src="./recipes-images/koala.png" class="" id="koala">
+    </div>
+
+        <div class="recipes">
+            <img src="./recipes-images/christmapolitan.png" class="img-responsive" id="christmapolitan">
+                <a href="#drinks">back to top</a>
+             <img src="./recipes-images/snowball.png" class="img-responsive"        id="snowball">
+                <a href="#drinks">back to top</a>
+            <img src="./recipes-images/stocking-stuffer.png" class="img-responsive" id="stocking-stuffer">
+                <a href="#drinks">back to top</a>
+            <img src="./recipes-images/christmasaurus.png" class="img-responsive" id="christmasaurus">
+                <a href="#drinks">back to top</a>
+            <img src="./recipes-images/crooked-antler.png" class="img-responsive" id="crooked-antler">
+                <a href="#drinks-two">back to top</a>
+            <img src="./recipes-images/santa-slide.png" class="img-responsive" id="santa-slide">
+                <a href="#drinks-two">back to top</a>
+            <img src="./recipes-images/run-reindeer.png" class="img-responsive" id="run-reindeer">
+                <a href="#drinks-two">back to top</a>
+            <img src="./recipes-images/rudoplhs-replacement.png" class="img-responsive" id="rudoplhs-replacement">
+                <a href="#drinks-two">back to top</a>
+            <img src="./recipes-images/koala.png" class="img-responsive" id="koala">
+                <a href="#drinks-three">back to top</a>
+            <img src="./recipes-images/yippie.png" class="img-responsive" id="yippie">
+                <a href="#drinks-three">back to top</a>
+            <img src="./recipes-images/jingle-balls.png" class="img-responsive" id="jingle-balls">
             <a href="#drinks-three">back to top</a>
-            <img src="./recipes-images/yippie.png" class="" id="yippie">
-            <a href="#drinks-three">back to top</a>
-            <img src="./recipes-images/jingle-balls.png" class="" id="jingle-balls">
-            <a href="#drinks-three">back to top</a>
-            <img src="./recipes-images/hot-buttered.png" class="" id="hot-buttered">
-            <a href="#drinks">back to top</a>
-            <img src="./recipes-images/naughty-nice.png" class="" id="naughty-nice">
-            <a href="#drinks">back to top</a>
-            <img src="./recipes-images/mulled-wine.png" class="" id="mulled-wine">
-            <a href="#drinks">back to top</a>
-            <img src="./recipes-images/krampus.png" class="" id="krampus">
-            <a href="#drinks">back to top</a>
-            <img src="./recipes-images/secret-santa.png" class="i" id="secret-santa">
-            <a href="#drinks">back to top</a>
+            <img src="./recipes-images/hot-buttered.png" class="img-responsive" id="hot-buttered">
+                <a href="#drinks">back to top</a>
+            <img src="./recipes-images/naughty-nice.png" class="img-responsive" id="naughty-nice">
+                <a href="#drinks">back to top</a>
+            <img src="./recipes-images/mulled-wine.png" class="img-responsive" id="mulled-wine">
+                <a href="#drinks">back to top</a>
+            <img src="./recipes-images/krampus.png" class="img-responsive" id="krampus">
+                <a href="#drinks">back to top</a>
+            <img src="./recipes-images/secret-santa.png" class="img-responsive" id="secret-santa">
+                <a href="#drinks">back to top</a>
         </div>
         <div class="faqs" id="faqs">
             <div class="row">
                 <div class="col">
-            <img src="./miracle-images/faqs.png" class="">
+            <img src="./miracle-images/faqs.png" class="img-responsive">
             </div>
             <div class="col-4">
             <h1>Question 1</h1>
@@ -179,7 +172,7 @@
         </div>
         </div>
         <div class="reservations" id="reservations">
-            <img src="./miracle-images/reserve-spot.png" class="">
+            <img src="./miracle-images/reserve-spot.png" class="img-responsive">
             </div>
         <div class="dates mb-5">
         <div class="row">
