Injected new pages, images, and links

--- a/about.html
+++ b/about.html
@@ -46,15 +46,41 @@
         </div>
         <div class="container">
             <header> 
-                <img src="./about-images/about-header.png" class="img-fluid rounded mx-auto d-block">
+                <img src="./about-images/about-header.png" class="img-responsive header-image" id="top"  width="1500" alt="">
             </header>
             <main>
-                <div class="about-section">
-                    <img src="./about-images/john.png" class="img-fluid rounded mx-auto d-block" >
-                    <img src="./about-images/about-main-2.png" class="img-fluid rounded mx-auto d-block" >
-                </div>
-            </main>
+               <div class="john-about-picture">
+                <img src="./about-images/john-about-picture.png" class="img-responsive" width="1500" alt="">
+               </div>
+               <div class="bio">
+                <img src="./about-images/bio.png" class="img-responsive" width="1500" alt="">
+               </div>
+               <div class="our-vision">
+                <img src="./about-images/our-vision.png" class="img-responsive" width="1500" alt="">
+               </div>
+               <div class="inspiration">
+                <img src="./about-images/inspiration.png" class="img-responsive" width="1500" alt="">
+               </div>
+               <div class="our-mission">
+                <img src="./about-images/our-mission.png" class="img-responsive" width="1500" alt="">
+               </div>
+               <div class="the-vibe">
+                <img src="./about-images/the-vibe.png" class="img-responsive" width="1500" alt="">
+               </div>
+               <div class="vibe-pictures">
+                <img src="./about-images/vibe-pictures.png" class="img-responsive" width="1500" alt="">
+               </div>
+               <div class="end-pictures">
+                <img src="./about-images/end-pictures.png" class="img-responsive" width="1500" alt="">
+               </div>
+               <div class="nav-up">
+                <a href="#top">
+                    <img src="./icons/arrow-up.png" class="img-responsive nav-up-about" width="40" alt="">
+                </a>
                 
+               </div>
+            </main>
+    </div>
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
