--- a/home.html
+++ b/home.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="stylesheet.css" type="text/css" charset="utf-8" />
     <title>Thief NYC</title>
 </head>
 <body>
@@ -45,12 +46,33 @@
     </div>
     <div class="container">
         <header>
-            <img src="images/thief logo.jpg" class="img-fluid rounded mx-auto d-block" width="500px" height="200px"/>
+          <img src="./home-images/thick-ad-thieves.png" class="img-responsive thick" width="1500" alt="">
         </header>
         <main>
-            <div class="container">
-                <img src="images/underconstruction.png" class="img-fluid rounded mx-auto d-block" >
+          <img src="./home-images/ay-yo.png" class="img-responsive aye" width="1500" alt="">
+            <div class="menu-page">
+                <img src="./home-images/menu-background.png" class="img-responsive menu-background"  alt="">
+             <img src="./home-images/menu-links.png" class="img-responsive menu" width="1500" alt="">
+             <div class="row menu-buttons">
+                <div class="col">
+                    <a href="./menu.html">
+                    <img src="./home-images/peep-menu.png" class="img-responsive peep" width="300" alt="">
+                </a>
+                </div>
+                <div class="col">
+                    <a href="./menu.html">
+                    <img src="./home-images/cop-deals.png" class="img-responsive deals" width="300" alt="">
+                </a>
+                </div>
+                <div class="col">
+                    <a href="./menu.html">
+                    <img src="./home-images/get-fed.png" class="img-responsive fed" width="300" alt="">
+                </a>
+                </div>
+             </div>
             </div>
+            <img src="./home-images/lets-link.png" class="img-responsive lets-link" width="1500" alt="">
+            <img src="./home-images/hours.png" class="img-responsive hours" width="1500" alt="">
         </main>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
