--- a/menu.html
+++ b/menu.html
@@ -44,11 +44,16 @@
       </div>
     </div>
     <div class="container">
-        <header>
-            
-        </header>
-        <div class="container">
-            <img src="images/underconstruction.png" class="img-fluid rounded mx-auto d-block" >
+        <div class="happy-hour" id="top">
+        <img src="./menu-images/happy-hour.png" class="img-responsive" width="750" alt="">
+        </div>
+      
+        <div class="wine-list">
+            <img src="./menu-images/wine-list.jpg" class="img-responsive wine-image" width="1200" alt="">
+        </div>
+
+        <div class="cocktails">
+            <img src="./menu-images/cocktails.jpg" class="img-responsive cocktail-menu" width="1200" alt="">
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
